# devassistant

./: .devassistant  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CONTRIBUTORS  MANIFEST.in  README.md  README.rst  da-gui.py  da-yaml-gui.py  da.bash  da.py  devassistant-modify.1  devassistant-modify.1.tail  devassistant-modify.py  devassistant-prepare.py  devassistant.1  devassistant.1.head  devassistant.1.tail  devassistant.bash  devassistant.desktop  devassistant.yaml.5  devel-assistant-gui.py  devel-assistant.glade  devel-assistant.py  finalWindow.py  mainWindow.py  man_page_generate.sh  mybin.py  pathWindow.py  requirements-devel.txt  requirements-py2.txt  requirements.txt  setup.py  yaml_assistant_checker.py  zenity_wrapper.sh
appdata/: devassistant.appdata.xml
daploader/: __init__.py  dapi.help  dapicli.py  daplint.py  licenses.py  matchers.py  utils.py
devassistant/: __init__.py  __main__.py  actions.py  argument.py  assistant_base.py  bin.py  cache.py  chain_handler.py  command.py  command_formatter.py  command_helpers.py  command_runners.py  commands.py  config_manager.py  current_run.py  excepthook.py  exceptions.py  handling_projects.py  lang.py  loaded_yaml.py  logger.py  package_managers.py  path_runner.py  remote_auth.py  settings.py  sigint_handler.py  snippet.py  utils.py  (+8 more)
devassistant/templates/c/: .autotools  .cproject  .eclipseproject  .gitignore  AUTHORS  NEWS  README  cdevelopmenttool.spec  configure.ac  simple_threads.c  tgz2rpm.sh  vim_update.sh  vimrc
devassistant/templates/c/src/: Makefile.am  basic_class.h  files.c  files_cpp.cpp
(+323 files in other folders)
