bin_PROGRAMS = fileOperations simpleThread server client fileOperations_cpp basic_class
fileOperations_SOURCES = files.c 
simpleThread_SOURCES = simple_threads.c
server_SOURCES = server.c
client_SOURCES = client.c
fileOperations_cpp_SOURCES = files_cpp.cpp
basic_class_SOURCES = basic_class.cpp basic_class.h
